Ejecucion desde carpeta de dacaspel y creacion de carpetas de reportes para cada empresa

--- a/MigracionAspelNOI/MigracionAspelNOI.csproj
+++ b/MigracionAspelNOI/MigracionAspelNOI.csproj
@@ -10,4 +10,8 @@
     <AssemblyName>MIGNOI</AssemblyName>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FirebirdSql.Data.FirebirdClient" Version="8.5.4" />
+  </ItemGroup>
+
 </Project>
